All_Component_DX/force-app/main/default/objects/Service_Order_Dependency__c/Service_Order_Dependency__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This Object define dependency among pair of work orders and combined together to form a dependency group.</description>
    <label>Work Order Dependency</label>
    <nameField>
        <displayFormat>WOD-{00000000}</displayFormat>
        <label>Work Order Dependency Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Dependencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>