All_Component_DX/force-app/main/default/objects/Service_Order_Dependency__c/fields/Dependency_Group__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Group__c</fullName>
    <label>Dependency Group</label>
    <referenceTo>Dependency_Management__c</referenceTo>
    <relationshipLabel>Work Order Dependencies</relationshipLabel>
    <relationshipName>Service_Order_Group_Dependencies_del</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>