All_Component_DX/force-app/main/default/objects/Service_Order_Dependency__c/fields/Maximum_Time_Deviation__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Time_Deviation__c</fullName>
    <label>Maximum Time Buffer</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>