All_Component_DX/force-app/main/default/objects/Service_Order_Dependency__c/fields/Primary_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Primary_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Work Order</label>
    <referenceTo>Service_Order__c</referenceTo>
    <relationshipLabel>Work Order Dependencies (Dependent Work Order)</relationshipLabel>
    <relationshipName>Service_Order_Group_Dependencies_del</relationshipName>
    <type>Lookup</type>
</CustomField>