All_Component_DX/force-app/main/default/objects/Service_Order_Dependency__c/fields/Resource_Dependency__c.field-meta.xml
<CustomField>
    <fullName>Resource_Dependency__c</fullName>
    <label>Resource Dependency</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Time_Dependency__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Same Resource</fullName>
            </value>
            <value>
                <fullName>Different Resource</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>