All_Component_DX/force-app/main/default/objects/Service_Order_Dependency__c/fields/Secondary_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Work Order</label>
    <referenceTo>Service_Order__c</referenceTo>
    <relationshipLabel>Work Order Dependencies (Target Work Order)</relationshipLabel>
    <relationshipName>Service_Order_Group_Dependencies1_del</relationshipName>
    <type>Lookup</type>
</CustomField>