All_Component_DX/force-app/main/default/objects/Service_Order_Dependency__c/fields/Targeted_Time_Difference__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Time_Difference__c</fullName>
    <label>Targeted Time Difference</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>