All_Component_DX/force-app/main/default/objects/Service_Order_Dependency__c/fields/Targeted_Time_Difference_Units__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Time_Difference_Units__c</fullName>
    <label>Targeted Time Difference Units</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Minutes</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>